src/main/src-antlr-grammar4-generated/com/syntevo/antlr/z8/Z8AsmParser.java
// Generated from grammar/Z8Asm.g4 by ANTLR 4.7.2
package com.syntevo.antlr.z8;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Z8AsmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LString=1, String=2, Char=3, Byte=4, Word=5, ValueByte=6, WorkingRegister=7, 
		IndirectPrefix=8, IWorkingRegister=9, IWorkingRegisterPair=10, Colon=11, 
		Comma=12, Data=13, Org=14, Adc=15, Add=16, And=17, Call=18, Ccf=19, Clr=20, 
		Com=21, Cp=22, Da=23, Dec=24, Decw=25, Di=26, Djnz=27, Ei=28, Inc=29, 
		Incw=30, Iret=31, Jp=32, Jr=33, Ld=34, Ldc=35, Ldci=36, Lde=37, Ldei=38, 
		Nop=39, Or=40, Pop=41, Push=42, Rcf=43, Ret=44, Rl=45, Rlc=46, Rr=47, 
		Rrc=48, Sbc=49, Scf=50, Sra=51, Srp=52, Sub=53, Swap=54, Tcm=55, Tm=56, 
		Xor=57, RegisterConstant=58, JpCondition=59, Identifier=60, Whitespace=61, 
		NL=62, LineComment=63, BlockComment=64;
	public static final int
		RULE_code = 0, RULE_labelDefinition = 1, RULE_address = 2, RULE_command = 3, 
		RULE_data = 4, RULE_dataItem = 5, RULE_org = 6, RULE_dec = 7, RULE_rlc = 8, 
		RULE_inc = 9, RULE_da = 10, RULE_pop = 11, RULE_com = 12, RULE_push = 13, 
		RULE_decw = 14, RULE_rl = 15, RULE_incw = 16, RULE_clr = 17, RULE_rrc = 18, 
		RULE_sra = 19, RULE_rr = 20, RULE_swap = 21, RULE_srp = 22, RULE_call = 23, 
		RULE_djnz = 24, RULE_jp = 25, RULE_jr = 26, RULE_ld = 27, RULE_ldc = 28, 
		RULE_ldci = 29, RULE_lde = 30, RULE_ldei = 31, RULE_di = 32, RULE_ei = 33, 
		RULE_ret = 34, RULE_iret = 35, RULE_rcf = 36, RULE_scf = 37, RULE_ccf = 38, 
		RULE_nop = 39, RULE_adc = 40, RULE_add = 41, RULE_and = 42, RULE_cp = 43, 
		RULE_or = 44, RULE_sbc = 45, RULE_sub = 46, RULE_tcm = 47, RULE_tm = 48, 
		RULE_xor = 49, RULE_arithmeticParameters = 50, RULE_arithmeticParameters1 = 51, 
		RULE_arithmeticParameters2 = 52, RULE_arithmeticParameters3 = 53, RULE_registerOrIregister = 54, 
		RULE_register = 55, RULE_iregister = 56, RULE_iregisterPair = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"code", "labelDefinition", "address", "command", "data", "dataItem", 
			"org", "dec", "rlc", "inc", "da", "pop", "com", "push", "decw", "rl", 
			"incw", "clr", "rrc", "sra", "rr", "swap", "srp", "call", "djnz", "jp", 
			"jr", "ld", "ldc", "ldci", "lde", "ldei", "di", "ei", "ret", "iret", 
			"rcf", "scf", "ccf", "nop", "adc", "add", "and", "cp", "or", "sbc", "sub", 
			"tcm", "tm", "xor", "arithmeticParameters", "arithmeticParameters1", 
			"arithmeticParameters2", "arithmeticParameters3", "registerOrIregister", 
			"register", "iregister", "iregisterPair"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "'@'", null, null, "':'", 
			"','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LString", "String", "Char", "Byte", "Word", "ValueByte", "WorkingRegister", 
			"IndirectPrefix", "IWorkingRegister", "IWorkingRegisterPair", "Colon", 
			"Comma", "Data", "Org", "Adc", "Add", "And", "Call", "Ccf", "Clr", "Com", 
			"Cp", "Da", "Dec", "Decw", "Di", "Djnz", "Ei", "Inc", "Incw", "Iret", 
			"Jp", "Jr", "Ld", "Ldc", "Ldci", "Lde", "Ldei", "Nop", "Or", "Pop", "Push", 
			"Rcf", "Ret", "Rl", "Rlc", "Rr", "Rrc", "Sbc", "Scf", "Sra", "Srp", "Sub", 
			"Swap", "Tcm", "Tm", "Xor", "RegisterConstant", "JpCondition", "Identifier", 
			"Whitespace", "NL", "LineComment", "BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Z8Asm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Z8AsmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CodeContext extends ParserRuleContext {
		public List<LabelDefinitionContext> labelDefinition() {
			return getRuleContexts(LabelDefinitionContext.class);
		}
		public LabelDefinitionContext labelDefinition(int i) {
			return getRuleContext(LabelDefinitionContext.class,i);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(Z8AsmParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(Z8AsmParser.NL, i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitCode(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Data) | (1L << Org) | (1L << Adc) | (1L << Add) | (1L << And) | (1L << Call) | (1L << Ccf) | (1L << Clr) | (1L << Com) | (1L << Cp) | (1L << Da) | (1L << Dec) | (1L << Decw) | (1L << Di) | (1L << Djnz) | (1L << Ei) | (1L << Inc) | (1L << Incw) | (1L << Iret) | (1L << Jp) | (1L << Jr) | (1L << Ld) | (1L << Ldc) | (1L << Ldci) | (1L << Lde) | (1L << Ldei) | (1L << Nop) | (1L << Or) | (1L << Pop) | (1L << Push) | (1L << Rcf) | (1L << Ret) | (1L << Rl) | (1L << Rlc) | (1L << Rr) | (1L << Rrc) | (1L << Sbc) | (1L << Scf) | (1L << Sra) | (1L << Srp) | (1L << Sub) | (1L << Swap) | (1L << Tcm) | (1L << Tm) | (1L << Xor) | (1L << Identifier) | (1L << NL))) != 0)) {
				{
				setState(119);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(116);
					labelDefinition();
					}
					break;
				case Data:
				case Org:
				case Adc:
				case Add:
				case And:
				case Call:
				case Ccf:
				case Clr:
				case Com:
				case Cp:
				case Da:
				case Dec:
				case Decw:
				case Di:
				case Djnz:
				case Ei:
				case Inc:
				case Incw:
				case Iret:
				case Jp:
				case Jr:
				case Ld:
				case Ldc:
				case Ldci:
				case Lde:
				case Ldei:
				case Nop:
				case Or:
				case Pop:
				case Push:
				case Rcf:
				case Ret:
				case Rl:
				case Rlc:
				case Rr:
				case Rrc:
				case Sbc:
				case Scf:
				case Sra:
				case Srp:
				case Sub:
				case Swap:
				case Tcm:
				case Tm:
				case Xor:
					{
					setState(117);
					command();
					}
					break;
				case NL:
					{
					setState(118);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelDefinitionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(Z8AsmParser.Identifier, 0); }
		public TerminalNode Colon() { return getToken(Z8AsmParser.Colon, 0); }
		public TerminalNode NL() { return getToken(Z8AsmParser.NL, 0); }
		public LabelDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterLabelDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitLabelDefinition(this);
		}
	}

	public final LabelDefinitionContext labelDefinition() throws RecognitionException {
		LabelDefinitionContext _localctx = new LabelDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_labelDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(Identifier);
			setState(125);
			match(Colon);
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(126);
				match(NL);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddressContext extends ParserRuleContext {
		public TerminalNode Word() { return getToken(Z8AsmParser.Word, 0); }
		public TerminalNode Identifier() { return getToken(Z8AsmParser.Identifier, 0); }
		public AddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_address; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterAddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitAddress(this);
		}
	}

	public final AddressContext address() throws RecognitionException {
		AddressContext _localctx = new AddressContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_address);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_la = _input.LA(1);
			if ( !(_la==Word || _la==Identifier) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(Z8AsmParser.NL, 0); }
		public TerminalNode EOF() { return getToken(Z8AsmParser.EOF, 0); }
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public OrgContext org() {
			return getRuleContext(OrgContext.class,0);
		}
		public AdcContext adc() {
			return getRuleContext(AdcContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public CcfContext ccf() {
			return getRuleContext(CcfContext.class,0);
		}
		public ClrContext clr() {
			return getRuleContext(ClrContext.class,0);
		}
		public ComContext com() {
			return getRuleContext(ComContext.class,0);
		}
		public CpContext cp() {
			return getRuleContext(CpContext.class,0);
		}
		public DaContext da() {
			return getRuleContext(DaContext.class,0);
		}
		public DecContext dec() {
			return getRuleContext(DecContext.class,0);
		}
		public DecwContext decw() {
			return getRuleContext(DecwContext.class,0);
		}
		public DiContext di() {
			return getRuleContext(DiContext.class,0);
		}
		public DjnzContext djnz() {
			return getRuleContext(DjnzContext.class,0);
		}
		public EiContext ei() {
			return getRuleContext(EiContext.class,0);
		}
		public IncContext inc() {
			return getRuleContext(IncContext.class,0);
		}
		public IncwContext incw() {
			return getRuleContext(IncwContext.class,0);
		}
		public IretContext iret() {
			return getRuleContext(IretContext.class,0);
		}
		public JpContext jp() {
			return getRuleContext(JpContext.class,0);
		}
		public JrContext jr() {
			return getRuleContext(JrContext.class,0);
		}
		public LdContext ld() {
			return getRuleContext(LdContext.class,0);
		}
		public LdcContext ldc() {
			return getRuleContext(LdcContext.class,0);
		}
		public LdciContext ldci() {
			return getRuleContext(LdciContext.class,0);
		}
		public LdeContext lde() {
			return getRuleContext(LdeContext.class,0);
		}
		public LdeiContext ldei() {
			return getRuleContext(LdeiContext.class,0);
		}
		public NopContext nop() {
			return getRuleContext(NopContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public PopContext pop() {
			return getRuleContext(PopContext.class,0);
		}
		public PushContext push() {
			return getRuleContext(PushContext.class,0);
		}
		public RcfContext rcf() {
			return getRuleContext(RcfContext.class,0);
		}
		public RetContext ret() {
			return getRuleContext(RetContext.class,0);
		}
		public RlContext rl() {
			return getRuleContext(RlContext.class,0);
		}
		public RlcContext rlc() {
			return getRuleContext(RlcContext.class,0);
		}
		public RrContext rr() {
			return getRuleContext(RrContext.class,0);
		}
		public RrcContext rrc() {
			return getRuleContext(RrcContext.class,0);
		}
		public SbcContext sbc() {
			return getRuleContext(SbcContext.class,0);
		}
		public ScfContext scf() {
			return getRuleContext(ScfContext.class,0);
		}
		public SraContext sra() {
			return getRuleContext(SraContext.class,0);
		}
		public SrpContext srp() {
			return getRuleContext(SrpContext.class,0);
		}
		public SubContext sub() {
			return getRuleContext(SubContext.class,0);
		}
		public SwapContext swap() {
			return getRuleContext(SwapContext.class,0);
		}
		public TcmContext tcm() {
			return getRuleContext(TcmContext.class,0);
		}
		public TmContext tm() {
			return getRuleContext(TmContext.class,0);
		}
		public XorContext xor() {
			return getRuleContext(XorContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Data:
				{
				setState(131);
				data();
				}
				break;
			case Org:
				{
				setState(132);
				org();
				}
				break;
			case Adc:
				{
				setState(133);
				adc();
				}
				break;
			case Add:
				{
				setState(134);
				add();
				}
				break;
			case And:
				{
				setState(135);
				and();
				}
				break;
			case Call:
				{
				setState(136);
				call();
				}
				break;
			case Ccf:
				{
				setState(137);
				ccf();
				}
				break;
			case Clr:
				{
				setState(138);
				clr();
				}
				break;
			case Com:
				{
				setState(139);
				com();
				}
				break;
			case Cp:
				{
				setState(140);
				cp();
				}
				break;
			case Da:
				{
				setState(141);
				da();
				}
				break;
			case Dec:
				{
				setState(142);
				dec();
				}
				break;
			case Decw:
				{
				setState(143);
				decw();
				}
				break;
			case Di:
				{
				setState(144);
				di();
				}
				break;
			case Djnz:
				{
				setState(145);
				djnz();
				}
				break;
			case Ei:
				{
				setState(146);
				ei();
				}
				break;
			case Inc:
				{
				setState(147);
				inc();
				}
				break;
			case Incw:
				{
				setState(148);
				incw();
				}
				break;
			case Iret:
				{
				setState(149);
				iret();
				}
				break;
			case Jp:
				{
				setState(150);
				jp();
				}
				break;
			case Jr:
				{
				setState(151);
				jr();
				}
				break;
			case Ld:
				{
				setState(152);
				ld();
				}
				break;
			case Ldc:
				{
				setState(153);
				ldc();
				}
				break;
			case Ldci:
				{
				setState(154);
				ldci();
				}
				break;
			case Lde:
				{
				setState(155);
				lde();
				}
				break;
			case Ldei:
				{
				setState(156);
				ldei();
				}
				break;
			case Nop:
				{
				setState(157);
				nop();
				}
				break;
			case Or:
				{
				setState(158);
				or();
				}
				break;
			case Pop:
				{
				setState(159);
				pop();
				}
				break;
			case Push:
				{
				setState(160);
				push();
				}
				break;
			case Rcf:
				{
				setState(161);
				rcf();
				}
				break;
			case Ret:
				{
				setState(162);
				ret();
				}
				break;
			case Rl:
				{
				setState(163);
				rl();
				}
				break;
			case Rlc:
				{
				setState(164);
				rlc();
				}
				break;
			case Rr:
				{
				setState(165);
				rr();
				}
				break;
			case Rrc:
				{
				setState(166);
				rrc();
				}
				break;
			case Sbc:
				{
				setState(167);
				sbc();
				}
				break;
			case Scf:
				{
				setState(168);
				scf();
				}
				break;
			case Sra:
				{
				setState(169);
				sra();
				}
				break;
			case Srp:
				{
				setState(170);
				srp();
				}
				break;
			case Sub:
				{
				setState(171);
				sub();
				}
				break;
			case Swap:
				{
				setState(172);
				swap();
				}
				break;
			case Tcm:
				{
				setState(173);
				tcm();
				}
				break;
			case Tm:
				{
				setState(174);
				tm();
				}
				break;
			case Xor:
				{
				setState(175);
				xor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(178);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public TerminalNode Data() { return getToken(Z8AsmParser.Data, 0); }
		public List<DataItemContext> dataItem() {
			return getRuleContexts(DataItemContext.class);
		}
		public DataItemContext dataItem(int i) {
			return getRuleContext(DataItemContext.class,i);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterData(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitData(this);
		}
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(Data);
			setState(182); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(181);
				dataItem();
				}
				}
				setState(184); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LString) | (1L << String) | (1L << Char) | (1L << Byte) | (1L << Word) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataItemContext extends ParserRuleContext {
		public TerminalNode Byte() { return getToken(Z8AsmParser.Byte, 0); }
		public AddressContext address() {
			return getRuleContext(AddressContext.class,0);
		}
		public TerminalNode LString() { return getToken(Z8AsmParser.LString, 0); }
		public TerminalNode String() { return getToken(Z8AsmParser.String, 0); }
		public TerminalNode Char() { return getToken(Z8AsmParser.Char, 0); }
		public DataItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterDataItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitDataItem(this);
		}
	}

	public final DataItemContext dataItem() throws RecognitionException {
		DataItemContext _localctx = new DataItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dataItem);
		try {
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Byte:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				match(Byte);
				}
				break;
			case Word:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				address();
				}
				break;
			case LString:
				enterOuterAlt(_localctx, 3);
				{
				setState(188);
				match(LString);
				}
				break;
			case String:
				enterOuterAlt(_localctx, 4);
				{
				setState(189);
				match(String);
				}
				break;
			case Char:
				enterOuterAlt(_localctx, 5);
				{
				setState(190);
				match(Char);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrgContext extends ParserRuleContext {
		public TerminalNode Org() { return getToken(Z8AsmParser.Org, 0); }
		public TerminalNode Word() { return getToken(Z8AsmParser.Word, 0); }
		public OrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_org; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).enterOrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Z8AsmListener ) ((Z8AsmListener)listener).exitOrg(this);
		}
	}
